--- a/app/src/main/res/layout/float_window_small.xml
+++ b/app/src/main/res/layout/float_window_small.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/small_window_layout"
+    <TextView
+        android:id="@+id/percent"
         android:layout_width="60dp"
         android:layout_height="25dp"
-        android:background="@drawable/bg_small" >
+        android:background="@drawable/small_view_bg"
+        android:gravity="center"
+        android:textColor="#ffffff"
+        tools:text="70%" />
 
-        <TextView
-            android:id="@+id/percent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textColor="#ffffff" />
-    </LinearLayout>
-    
-    <ImageView 
+    <ImageView
         android:id="@+id/rocket_img"
         android:layout_width="45dp"
         android:layout_height="90dp"
+        android:layout_gravity="center"
+        android:contentDescription="@null"
         android:src="@drawable/rocket"
         android:visibility="gone"
-        />
+        tools:visibility="gone" />
 
 </FrameLayout>
