--- a/app/src/main/res/layout/launcher.xml
+++ b/app/src/main/res/layout/launcher.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:orientation="vertical"
-    >
-    
-    <ImageView 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <ImageView
         android:id="@+id/launcher_img"
         android:layout_width="200dp"
         android:layout_height="88dp"
-        android:src="@drawable/launcher_bg_hold"
-        />
-    
+        android:src="@drawable/launcher_bg_hold" />
+
 </LinearLayout>
