--- a/app/src/main/res/layout/float_window_big.xml
+++ b/app/src/main/res/layout/float_window_big.xml
@@ -2,8 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/big_window_layout"
-    android:layout_width="130dp"
-    android:layout_height="150dp"
+    android:layout_width="200dp"
+    android:layout_height="300dp"
     android:background="@drawable/big_view_bg"
     android:theme="@style/AppTheme"
     app:theme="@style/AppTheme">
@@ -15,12 +15,12 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/customButton"
+            android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_margin="5dp"
-            android:text="启动Activity"
-            android:textAllCaps="false" />
+            android:text="返回" />
 
         <Button
             android:id="@+id/close"
@@ -31,12 +31,12 @@
             android:text="关闭悬浮窗" />
 
         <Button
-            android:id="@+id/back"
+            android:id="@+id/customButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_margin="5dp"
-            android:text="返回" />
+            android:text="启动Activity"
+            android:textAllCaps="false" />
 
         <Button
             android:id="@+id/button1"
@@ -50,28 +50,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="设置系统语言" />
+            android:text="切换系统语言" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="可用的输入法" />
+            android:text="设置可用的输入法" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="应用列表" />
+            android:text="跳转到应用列表" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="辅助功能" />
+            android:text="跳转到辅助功能" />
     </LinearLayout>
 
 </ScrollView>
