--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="primary_color">#2196f3</color>
     <color name="primary_color_dark">#1A78C2</color>
 
-    <color name="primary_bg_color">#415053</color>
+    <color name="primary_bg_color">#88888888</color>
 </resources>
