--- a/app/src/main/res/layout/float_window_big.xml
+++ b/app/src/main/res/layout/float_window_big.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/big_window_layout"
     android:layout_width="200dp"
     android:layout_height="300dp"
-    android:background="@drawable/big_view_bg"
-    android:theme="@style/AppTheme"
-    app:theme="@style/AppTheme">
+    android:background="@drawable/big_view_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,61 +13,42 @@
 
         <Button
             android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="5dp"
+            style="@style/list_button_style"
             android:text="返回" />
 
         <Button
             android:id="@+id/close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="5dp"
+            style="@style/list_button_style"
             android:text="关闭悬浮窗" />
 
         <Button
             android:id="@+id/customButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="启动Activity"
-            android:textAllCaps="false" />
+            style="@style/list_button_style"
+            android:text="启动Activity" />
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            style="@style/list_button_style"
             android:text="设置系统时间" />
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            style="@style/list_button_style"
             android:text="切换系统语言" />
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            style="@style/list_button_style"
             android:text="设置可用的输入法" />
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            style="@style/list_button_style"
             android:text="跳转到应用列表" />
 
         <Button
             android:id="@+id/button5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            style="@style/list_button_style"
             android:text="跳转到辅助功能" />
     </LinearLayout>
 
