添加开发者选项快速入口

--- a/app/src/main/res/layout/float_window_big.xml
+++ b/app/src/main/res/layout/float_window_big.xml
@@ -50,6 +50,11 @@
             android:id="@+id/button5"
             style="@style/list_button_style"
             android:text="跳转到辅助功能" />
+
+        <Button
+            android:id="@+id/button6"
+            style="@style/list_button_style"
+            android:text="开发者选项" />
     </LinearLayout>
 
 </ScrollView>
